# Auth-System

./: .env.example  README.md  pyproject.toml
app/: __init__.py  crud.py  database.py  main.py  models.py  ratelimitor.py  schemas.py  settings.py
app/templates/: base.html  home.html  login.html  register.html
